2007-07-25  Glenn Morris  <rgm@gnu.org>

	* Relicense all FSF files to GPLv3 or later.

2007-06-14  Juanma Barranquero  <lekktu@gmail.com>

	* erc-goodies.el (erc-scroll-to-bottom): Remove redundant check.

2007-06-06  Juanma Barranquero  <lekktu@gmail.com>

	* erc.el (erc-show-channel-key-p, erc-startup-file-list):
	Fix typo in docstring.

2007-04-01  Michael Olson  <mwolson@gnu.org>

	* erc.el (erc-version-string): Release ERC 5.2.

	* erc-auto.in, erc-chess.el, erc-list.el, erc-speak.el:
	* erc-viper.el: Update copyright notices.

	* erc.texi: Make Emacs Lisp source code in this document
	essentially public domain.  Update version to 5.2.
	(Obtaining ERC): Mention extras tarball.
	(Releases): Mention local GNU mirror.
	(Sample Configuration): Remove notice.

	* FOR-RELEASE (5.3): Add item for erc-nicklist.
	Mark NEWS as done.  Mark extras tarball as done.

	* Makefile (VERSION): Increment to 5.2.
	(TESTING): Remove.
	(EXTRAS): New variable containing the contents of our "Emacs 22
	extras" tarball.
	(SOURCE): Remove $(TESTING).
	(MISC): Add COPYING and ChangeLog.06.  Fix ChangeLog.NNNN ->
	ChangeLog.NN.
	(release): Use $(SNAPDIR) instead of erc-$(VERSION).
	(extras): New rule which implements the building of the extras
	tarball.
	(upload-extras): New rule to upload the extras tarball.  It's
	yucky to replicate upload, but oh well.

	* NEWS: Mention extras tarball.  Note which files have been
	renamed.  Note that erc-list is enabled by default, except in
	Emacs 22.

	* README.extras: New file which serves as a README for the extras
	tarball.

2007-03-31  Michael Olson  <mwolson@gnu.org>

	* NEWS: Update for the 5.2 release.

	* FOR-RELEASE: Finish up 5.2 manual item.  Add documentation item
	for 5.3.

	* erc.texi (Sample Session): Flesh out.  Mention #erc.
	(Modules): Defer to 5.3 release.
	(Advanced Usage): Move Sample Configuration chapter ahead of
	unfinished chapters.
	(Sample Configuration): Write.